--- a/www/jquery-mobile-froyo-rni.css
+++ b/www/jquery-mobile-froyo-rni.css
@@ -24,7 +24,7 @@ button,
 .ui-btn {
 	font-size: 1em;
 	line-height: 1.3;
-	        font-family: helvetica, arial, sans-serif /*{global-font-family}*/;
+	        font-family: Open Sans, arial, sans-serif /*{global-font-family}*/;
 }
 legend,
 .ui-input-text input,
@@ -220,8 +220,9 @@ html .ui-alt-icon .ui-radio-off:after {
 html .ui-bar-a .ui-bar-inherit,
 html .ui-body-a .ui-bar-inherit,
 html body .ui-group-theme-a .ui-bar-inherit {
-	background: #ff9e30 /*{a-bar-background-color}*/;
+	/*background: #ff9e30*/ /*{a-bar-background-color}*/;
 	border-color: #d8854f /*{a-bar-border}*/;
+	
 	color: #000000 /*{a-bar-color}*/;
 	text-shadow: 0 /*{a-bar-shadow-x}*/ 1px /*{a-bar-shadow-y}*/ 0 /*{a-bar-shadow-radius}*/ #eeeeee /*{a-bar-shadow-color}*/;
 	font-weight: bold;
@@ -246,10 +247,11 @@ html .ui-bar-a .ui-body-inherit,
 html .ui-body-a .ui-body-inherit,
 html body .ui-group-theme-a .ui-body-inherit,
 html .ui-panel-page-container-a {
-	background: #ffffff /*{a-body-background-color}*/;
+	background-color: none /*{a-body-background-color}*/;
 	border-color: #dddddd /*{a-body-border}*/;
 	color: #333333 /*{a-body-color}*/;
 	text-shadow: 0 /*{a-body-shadow-x}*/ 1px /*{a-body-shadow-y}*/ 0 /*{a-body-shadow-radius}*/ #f3f3f3 /*{a-body-shadow-color}*/;
+	background: url(images/screen-hdpi-landscape.png) scrolling 50% 50% no-repeat;
 }
 .ui-body-a {
 	border-width: 1px;
